# tagging_system

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  README.md  docker-compose.dev.yml  docker-compose.yml  eval_results.json  main.py  pyproject.toml
app/: config.py  main.py
app/api/: documents.py  tags.py
app/db/: repository.py  schemas.py
app/finetuning/: evaluate.py  finetune_reranker.py
app/schemas/: document.py  tag.py
app/services/application/: document_service.py  tag_service.py
app/services/infrastructure/: dbpedia_loader.py  embedding.py  reranker.py  retrieval.py  vector_store.py
ui/: streamlit_app.py
