[project]
name = "tagging-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "uvicorn[standard]>=0.43.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", group = "finetuning" },
    { index = "pytorch-cpu" },
]

[dependency-groups]
finetuning = [
    "torch>=2.11.0",
]
